# sonic-build-infra

./: BUILD.bazel  MODULE.bazel  bind.bzl
config/: BUILD.bazel  README.md  constants.bzl
proto/: extract_proto_headers.bzl
python/: BUILD.bazel  site_packages.bzl
swig/: BUILD.bazel  defs.bzl  extract.bzl  gen.bzl
tar/: assert_tar.bzl  extract_tar.bzl
tests/: BUILD.bazel  inconsistent_sizes.expected.txt  simple_tar.expected.txt  third_party_packages.expected.txt
tests/testdata/: file.txt
toolchains/args/: BUILD.bazel
toolchains/gcc/: BUILD.bazel  gcc.BUILD  gcc.bzl
toolchains/gcc/args/: BUILD.bazel
