load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load(":constants.bzl", "ASIC_MANUFACTURERS", "DEVICES")

package(default_visibility = ["//visibility:public"])

# SONiC platform, which maps to ASIC manufacturers
string_flag(
    name = "asic_manufacturer",
    build_setting_default = "_incompatible",
    values = ASIC_MANUFACTURERS,
)

[
    config_setting(
        name = "platform_" + manufacturer,
        flag_values = {
            ":asic_manufacturer": manufacturer,
        },
        visibility = ["//visibility:public"],
    )
    for manufacturer in ASIC_MANUFACTURERS
]

# SONiC devices, which map to switch box manufacturers
string_flag(
    name = "device",
    build_setting_default = "_incompatible",
    values = DEVICES,
)

[
    config_setting(
        name = "device_" + device,
        flag_values = {
            ":device": device,
        },
        visibility = ["//visibility:public"],
    )
    for device in DEVICES
]
