load("//tar:assert_tar.bzl", "assert_tar")
load("@tar.bzl", "mutate", "tar")


tar(
    name = "simple_tar_mutate",
    srcs = ["//tests/testdata:file.txt"],
    mutate = mutate(
        strip_prefix = package_name() + "/testdata",
        package_dir = "./usr/lib",
    ),
)

assert_tar(
    name = "simple_tar_mutate_assert",
    tar = ":simple_tar_mutate",
    expected = ":simple_tar.expected.txt",
)

tar(
    name = "simple_tar_mtree",
    srcs = ["//tests/testdata:file.txt"],
    mtree = [
        ". time=946699200 mode=0755 type=dir",
        "./usr uid=0 gid=0 time=946699200 mode=0755 type=dir",
        "./usr/lib uid=0 gid=0 time=946699200 mode=0755 type=dir",
        "./usr/lib/file.txt uid=0 gid=0 time=1672560000 mode=0755 type=file content=$(location //tests/testdata:file.txt)",
    ],
)

assert_tar(
    name = "simple_tar_mtree_assert",
    tar = ":simple_tar_mtree",
    expected = ":simple_tar.expected.txt",
)
