# Copyright 2025 The Bazel Authors. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_skylib//rules/directory:subdirectory.bzl", "subdirectory")
load("@rules_cc//cc/toolchains:args.bzl", "cc_args")
load("@rules_cc//cc/toolchains/args:sysroot.bzl", "cc_sysroot")

HEADERS = {
    "libstdc": "@bookworm_libstdc---12-dev-amd64_12.2.0-14-deb12u1//:directory",
    "libc6": "@bookworm_libc6-dev-amd64_2.36-9-deb12u13//:directory",
    "linux-libc": "@bookworm-security_linux-libc-dev-amd64_6.1.153-1//:directory",
    "libgcc": "@bookworm_libgcc-12-dev-amd64_12.2.0-14-deb12u1//:directory",
}

cc_args(
    name = "includes",
    actions = [
        "@rules_cc//cc/toolchains/actions:c_compile",
        "@rules_cc//cc/toolchains/actions:cpp_compile_actions",
    ],
    args = [
        # https://gcc.gnu.org/bugzilla/show_bug.cgi?id=70129
        "-idirafter",
        "{libgcc}/usr/lib/gcc/x86_64-linux-gnu/12/include",
        "-idirafter",
        "{linux-libc}/usr/include",
        "-idirafter",
        "{linux-libc}/usr/include/x86_64-linux-gnu",
        "-idirafter",
        "{libstdc}/usr/include/c++/12",
        "-idirafter",
        "{libstdc}/usr/include/x86_64-linux-gnu/c++/12",
        "-idirafter",
        "{libc6}/usr/include",
        "-idirafter",
        "{libc6}/usr/include/x86_64-linux-gnu",

        # Workaround for rules_rust cargo_build_script and rules_foreign_cc
        "-idirafter",
        "../../../../../../../{libgcc}/usr/lib/gcc/x86_64-linux-gnu/12/include",
        "-idirafter",
        "../../../../../../../{linux-libc}/usr/include",
        "-idirafter",
        "../../../../../../../{linux-libc}/usr/include/x86_64-linux-gnu",
        "-idirafter",
        "../../../../../../../{libstdc}/usr/include/c++/12",
        "-idirafter",
        "../../../../../../../{libstdc}/usr/include/x86_64-linux-gnu/c++/12",
        "-idirafter",
        "../../../../../../../{libc6}/usr/include",
        "-idirafter",
        "../../../../../../../{libc6}/usr/include/x86_64-linux-gnu",
    ],
    data = HEADERS.values(),
    format = HEADERS,
    visibility = ["//visibility:public"],
)

LINK_LIBS = {
    "libc6": "@bookworm_libc6-amd64_2.36-9-deb12u13//:directory",
    "libc6-dev": "@bookworm_libc6-dev-amd64_2.36-9-deb12u13//:directory",
    "libgcc-s1": "@bookworm_libgcc-s1-amd64_12.2.0-14-deb12u1//:directory",
    "libgcc-dev": "@bookworm_libgcc-12-dev-amd64_12.2.0-14-deb12u1//:directory",
    "libstdc": "@bookworm_libstdc---12-dev-amd64_12.2.0-14-deb12u1//:directory",
}

cc_args(
    name = "links",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_actions",
        "@rules_cc//cc/toolchains/actions:link_executable_actions",
    ],
    args = [
        "-B",
        "{libc6}/lib/x86_64-linux-gnu",
        "-Wl,-rpath=/lib/x86_64-linux-gnu",
        "-Wl,-rpath-link=/lib/x86_64-linux-gnu",
        "-B",
        "{libc6-dev}/usr/lib/x86_64-linux-gnu",
        "-L",
        "{libgcc-s1}//lib/x86_64-linux-gnu",
        "-L",
        "{libstdc}/usr/lib/gcc/x86_64-linux-gnu/12",
        "-Wl,-rpath=/usr/lib/x86_64-linux-gnu/gconv",

        # For rules_foreign_cc and rules_rust to work after changing its workdir
        "-B",
        "../../../../../../../{libc6}/lib/x86_64-linux-gnu",
        "-B",
        "../../../../../../../{libc6-dev}/usr/lib/x86_64-linux-gnu",
        "-L",
        "../../../../../../../{libgcc-s1}/lib/x86_64-linux-gnu",
        "-L",
        "../../../../../../../{libgcc-dev}/usr/lib/gcc/x86_64-linux-gnu/12",
        "-L",
        "../../../../../../../{libstdc}/usr/lib/gcc/x86_64-linux-gnu/12",
    ],
    data = LINK_LIBS.values(),
    format = LINK_LIBS,
    visibility = ["//visibility:public"],
)

cc_args(
    name = "nostdinc",
    actions = ["@rules_cc//cc/toolchains/actions:c_compile"],
    args = ["-nostdinc"],
    visibility = ["//visibility:public"],
)

cc_args(
    name = "nostdinc++",
    actions = ["@rules_cc//cc/toolchains/actions:cpp_compile_actions"],
    args = ["-nostdinc++"],
    visibility = ["//visibility:public"],
)

cc_args(
    name = "nostdlib",
    actions = [
        "@rules_cc//cc/toolchains/actions:link_actions",
        "@rules_cc//cc/toolchains/actions:link_executable_actions",
    ],
    # args = ["-nostdlib"],
    visibility = ["//visibility:public"],
)

cc_sysroot(
    name = "linux_sysroot",
    sysroot = "@@rules_distroless++apt+bookworm_libc6-dev-amd64_2.36-9-deb12u13//:directory",
    visibility = ["//visibility:public"],
)
